--- a/machinekit-documentation/developing/building-rt-preempt-kernel.asciidoc
+++ b/machinekit-documentation/developing/building-rt-preempt-kernel.asciidoc
@@ -11,12 +11,11 @@ Then download the matching vanilla kernel from www.kernel.org.
 
 These sample instructions cover the building of kernel 3.8.11 with rt patch no 7
 
-Substitute the kernel version you have for 3.8.11 in the below instructions
+Substitute the kernel version you have for 3.8.11 and the rt patch version you have for 3.8.11-rt7 in the below instructions
 
-I have built all the recent rt x86-amd64 patches up to kernel 4.1.5 using patch 4.x.x-rt5
-and all worked well
+All the recent rt x86-amd64 patches up to kernel 4.1.5 have been tested and all worked well.
 
-Copy link:./rt-kernel-config[this] config to a file called .config in the root directory of the kernel sources.
+Cut and Paste link:./rt-kernel-config[this] config to a file called .config in the root directory of the kernel sources.
 
 === Commands from a terminal
 cd ~
