--- a/machinekit-documentation/getting-started/APT-packages-jessie.asciidoc
+++ b/machinekit-documentation/getting-started/APT-packages-jessie.asciidoc
@@ -25,7 +25,7 @@ Pin-Priority: 900
 Package: *
 Pin: release o=Debian
 Pin-Priority: -10' > \
-/etc/apt/preferences;"
+/etc/apt/preferences/sid;"
 ----
 
 ==== Add the `sid` repository to you debian sources list and update.
