docs - gmoccapy - added documentation
I do hope not to have all files modified and added correctly,
I could not see my results localy, as I can not do "make" etc.


Signed-off-by: Norbert Schechner <nieson@web.de>

--- a/src/Master_User.asciidoc
+++ b/src/Master_User.asciidoc
@@ -38,6 +38,8 @@ include::gui/ngcgui.asciidoc[]
 
 include::gui/touchy.asciidoc[]
 
+include::gui/gmoccapy.asciidoc[]
+
 include::gui/tkmachinekit.asciidoc[]
 
 include::gui/mini.asciidoc[]
