--- a/machinekit-documentation/getting-started/APT-packages-wheezy.asciidoc
+++ b/machinekit-documentation/getting-started/APT-packages-wheezy.asciidoc
@@ -7,18 +7,17 @@
 
 = [[configure-APT-i686-amd64-arm7-wheezy]]Configure Apt for i686, amd64 and arm7 (Beaglebone) for `wheezy`
 
-
-Copy and paste the following into a shell to configure the package archive:
+==== Add Machinekit repository
 
 [source,bash]
 ----
+sudo apt-key adv --keyserver keyserver.ubuntu.com --recv 43DDF224
 sudo sh -c \
-  "echo 'deb http://deb.dovetail-automata.com wheezy main' > \
-  /etc/apt/sources.list.d/machinekit.list; \
-  apt-get update ; \
-  apt-get install dovetail-automata-keyring"
+  "echo 'deb http://deb.machinekit.io/debian wheezy main' > \
+  /etc/apt/sources.list.d/machinekit.list"
 sudo apt-get update
-----
+
+
 continue with:
 [cols="1*"]
 |===
