development setup instructions takeover from machinekit.io

--- a/machinekit-documentation/getting-started/APT-packages-jessie.asciidoc
+++ b/machinekit-documentation/getting-started/APT-packages-jessie.asciidoc
@@ -86,9 +86,10 @@ sudo sh -c \
 sudo apt-get update
 ----
 continue with:
-[cols="1*"]
+[cols="2*"]
 |===
 |link:installing-packages.asciidoc#install-RT-kernel[install your RT kernel]
+|link:../developing/machinekit-developing.asciidoc#install-development-packages[return to development setup]
 |===
 
 
