fix code block and anchor link

--- a/machinekit-documentation/getting-started/APT-packages-wheezy.asciidoc
+++ b/machinekit-documentation/getting-started/APT-packages-wheezy.asciidoc
@@ -16,13 +16,13 @@ sudo sh -c \
   "echo 'deb http://deb.machinekit.io/debian wheezy main' > \
   /etc/apt/sources.list.d/machinekit.list"
 sudo apt-get update
-
+----
 
 continue with:
 [cols="2*"]
 |===
 |link:installing-packages.asciidoc#install-RT-kernel[install your RT kernel]
-|link:../developing/machinekit-developing.asciidoc#development-packages[return to development setup]
+|link:../developing/machinekit-developing.asciidoc#install-development-packages[return to development setup]
 
 |===
 
