--- a/machinekit-documentation/getting-started/machinekit-images.asciidoc
+++ b/machinekit-documentation/getting-started/machinekit-images.asciidoc
@@ -14,7 +14,7 @@ Head over to link:http://elinux.org/Beagleboard:BeagleBoneBlack_Debian#BBW.2FBBB
 and download and install the image on a microSD card and run the image from
 that, or install the image on the eMMC.
 
-Instructions on writing a microSD image: link:https://encrypted.google.com/search?q=beaglebone+black+flashing+SD+card[can be found here] by doing a Google search. There are plenty examples and tutorials
+Instructions on writing a microSD card https://encrypted.google.com/search?q=beaglebone+black+flashing+SD+card[can be found here] by doing a Google search. There are plenty examples and tutorials
 around also for writing the image to the eMMC.
 
 [cols="3*"]
