clarify what package install means

--- a/machinekit-documentation/getting-started/getting-started-platform.asciidoc
+++ b/machinekit-documentation/getting-started/getting-started-platform.asciidoc
@@ -21,7 +21,7 @@ Installation options:
 ====================
 
 . link:machinekit-images.asciidoc[Use a pre-made image] for Beaglebone Black
-. link:installing-packages.asciidoc[Set up the packages yourself]
+. link:installing-packages.asciidoc[Install precompiled debian packages]
   for amd64, i386, and arm7 (or later) systems like the Beaglebone Raspberry Pi2. This means configuring
   Apt, installing kernels and installing the runtime packages.
 . link:../developing/developing.asciidoc[Set up a development platform]
