--- a/machinekit-documentation/getting-started/installing-packages.asciidoc
+++ b/machinekit-documentation/getting-started/installing-packages.asciidoc
@@ -57,7 +57,6 @@ a|link:APT-packages-jessie.asciidoc[Configure APT on Debian `jessie`]
 
 |===
 
-
 === [[configure-APT-i686-arm6]]Configure Apt for Raspbian arm7 (RPi2)
 
 Copy and paste the following into a shell to configure the package
@@ -78,8 +77,8 @@ continue with:
 
 == [[install-RT-kernel]]Install a realtime kernel
 
-- <<rt-kernel-xenomai,Xenomai realtime kernel (all platforms)>>
-- <<rt-kernel-rt-preempt,RT-PREEMPT realtime kernel (i686 and amd64)>>
+- <<rt-kernel-xenomai,Xenomai realtime kernel (i386, amd64 and Beaglebone)>>
+- <<rt-kernel-rt-preempt,RT-PREEMPT realtime kernel (i386, amd64 and Rpi2)>>
 
 === [[rt-kernel-xenomai]]Xenomai realtime kernel (all platforms)
 
@@ -93,9 +92,14 @@ sudo apt-get install linux-image-xenomai.x86-amd64 	  # amd64
 ----
 sudo apt-get install linux-image-xenomai.x86-686-pae      # i386
 ----
+
+Note the Beaglebone Xenomai kernel is distributed via http://repos.rcn-ee.com/debian/, 
+this repo should already be configured in /etc/apt/sources.list if you started with a Beaglebone Debian SD card.
+To list current Xenomai kernels available, run `apt-get update; apt-cache search linux-image-3.8 |grep xenomai`. 
+For now, stay with the `linux-image-3.8` Xenomai kernels.
 [source,bash]
 ----
-sudo apt-get install linux-image-xenomai.beaglebone-omap  # beaglebone
+sudo apt-get install linux-image-3.8.13-xenomai-r78  # current beaglebone xenomai kernel.
 ----
 [cols="2*"]
 |===
@@ -104,7 +108,7 @@ sudo apt-get install linux-image-xenomai.beaglebone-omap  # beaglebone
 |link:../developing/machinekit-developing.asciidoc[install machinekit development packages]
 |===
 
-=== [[rt-kernel-rt-preempt]]RT-PREEMPT realtime kernel (i386 or amd64)
+=== [[rt-kernel-rt-preempt]]RT-PREEMPT realtime kernel (i386, amd64, Rpi2)
 
 There is currently no stock Debian rt-preempt kernel for Jessie
 
