--- a/machinekit-documentation/developing/machinekit-developing.asciidoc
+++ b/machinekit-documentation/developing/machinekit-developing.asciidoc
@@ -28,7 +28,7 @@ link:../getting-started/installing-packages.asciidoc#configure-apt[here] to do s
 [source,bash]
 ----
 sudo apt-get install libczmq-dev python-zmq libjansson-dev \
-  libwebsockets-dev libxenomai-dev python-pyftpdlib cython bwidget
+  libwebsockets-dev libxenomai-dev python-pyftpdlib cython bwidget lsb-release
 ----
 
 If you are on Debian Wheezy then you need to add wheezy-backports in the
